Fix spacing on nav bar

--- a/src/components/header/headerStyle.css
+++ b/src/components/header/headerStyle.css
@@ -14,15 +14,26 @@
     justify-content: center;
     gap: 25px;
 }
+ul {
+    padding-left: 0px;
+}
 .design-links {
     font-size: 40px;
     padding-left: 0px;
     text-decoration: none;
 }
 @media screen and (min-width: 900px) {
+    .navigation {
+        gap: 40px;
+    }
+}
+@media screen and (min-width: 900px) {
     .logo {
         width: 700px;
         align-self: center;
         margin-left: 10px;
+    }
+    .navigation {
+        gap: 60px;
     }
 }
